--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 					</div>
 				</div>
 				
-				<center></center><div class="container"><div class="contrast"><p>All these photos are by the amazing senior <a href="https://www.facebook.com/bhargavshridhar?fref=ts">Bhargav Sridhar</a></p></div></div>
+				<center><div class="container"><div class="contrast"><p>All these photos are by the amazing senior <a href="https://www.facebook.com/bhargavshridhar?fref=ts">Bhargav Sridhar</a></p></div></div>
 				</center>
 				<div class="follow-us-container">
 					<div class="wow fadeInUp text-center" data-wow-duration="0.8s" data-wow-delay="1.5s">
@@ -219,7 +219,7 @@
 									<div class="fh5co-text-inner">
 										<div class="row">
 											<div class="col-md-6"><h3>FAQ's</h3></div>
-											<div class="col-md-6"><p>Check out the Frequently Asked Questions. Link to the iMTech Admission Forum 2016 <a href="https://www.facebook.com/groups/391580577698895/" target="_blank"></a></p></div>
+											<div class="col-md-6"><p>Check out the Frequently Asked Questions.Also ask any more questions at <a href="https://www.facebook.com/groups/391580577698895/" target="_blank">iMTech Admission Forum 2016</a></p></div>
 										</div>
 									</div>
 								</div>
@@ -281,7 +281,7 @@
 		<div class="col-sm-12">
                 	<div class="copyright-text text-center">
                     		<p>&copy; Zense 2016. All Rights Reserved.</p>
-                    		<p>Designed by<a href="http://zense.co.in/">Zense</a></p>
+                    		<p>Designed by <a href="http://zense.co.in/">Zense</a></p>
                 	</div>
                 </div>
 
