--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@
 					</div>
 				</div>
 				
-				<center><div class="container"><div class="contrast"><p>All these photos are by the amazing senior <a href="https://www.facebook.com/bhargavshridhar?fref=ts">Bhargav Sridhar</a></p></div></div>
-				</center>
+			
 				<div class="follow-us-container">
 					<div class="wow fadeInUp text-center" data-wow-duration="0.8s" data-wow-delay="1.5s">
 						<a class="fa fa-facebook social-icon" href="https://www.facebook.com/IIIT-Bangalore-152653471481338/" target="_blank"></a>
@@ -116,6 +115,8 @@
 						<a class="fa fa fa-youtube-play social-icon" href="https://www.youtube.com/user/iiitbmedia" target="_blank"></a>
 					</div>
 				</div>
+				
+				<center><p>All these photos are by the amazing senior <a href="https://www.facebook.com/bhargavshridhar?fref=ts">Bhargav Sridhar</a></p></center>
 			</div>
 		</div>
 		<div class="fh5co-project-style-2" style="padding: 0px ! important;">
@@ -219,7 +220,7 @@
 									<div class="fh5co-text-inner">
 										<div class="row">
 											<div class="col-md-6"><h3>FAQ's</h3></div>
-											<div class="col-md-6"><p>Check out the Frequently Asked Questions.Also ask any more questions at <a href="https://www.facebook.com/groups/391580577698895/" target="_blank">iMTech Admission Forum 2016</a></p></div>
+											<div class="col-md-6"><p>Check out the Frequently Asked Questions.Also ask any more questions at iMTech Admission Forum 2016</p></div>
 										</div>
 									</div>
 								</div>
