--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 						</a>
 					</li>
 					<li class="wow fadeInUp back1" data-wow-duration="0.8s" data-wow-delay="0.8s">
-						<a class="open-overlay" data-tag="contributions" href="#contributions">
+						<a href="#contributions">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
 								<div class="fh5co-text">
