--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 		$('#slides').superslides({
 			play: 5000,
 			animation_speed: 2000,
-			animation:'slide',
+			animation:'fade',
 			nav: true,
 			pagination:true
 		});
