--- a/index.html
+++ b/index.html
@@ -364,6 +364,7 @@
 		readFiles('howtoreach', 'How to Reach IIIT-B');
 		readFiles('placestovisit', 'Places to Visit in & around Bangalore');
 		readFiles('hotels', 'Hotels around IIIT-B');
+		readFiles('contributions', 'Contributors');
 
 		$(function () {
 		    var rx = /INPUT|TEXTAREA/i;
