--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="0.8s" data-wow-delay=".5s">The IIIT-B Student Kit</h2>
 						<p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay=".8s">This is an informal guide by the students of IIIT-B</p>
 						<p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay=".8s">Here, you can find everything you need to know to before becoming a student of IIIT-B</p>
-						<p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay=".8s">Also look at the **<a href="https://www.facebook.com/groups/391580577698895/" target="_blank">iMTech Admission Forum 2016</a>**</p>
+						<p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay=".8s">Also look at the <b></b><a href="https://www.facebook.com/groups/391580577698895/" target="_blank">iMTech Admission Forum 2016</a></b></p>
 						<p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="1.1s"><a class="btn btn-success btn-lg btn-responsive">Click on tile to see</a></p>
 					</div>
 				</div>
