--- a/index.html
+++ b/index.html
@@ -266,10 +266,9 @@
 		<div class="container">
 			<div class="fh5co-text">
 				<div class="fh5co-text-inner">
-					<div class="row p-b">
+					<div class="row p-b" style="padding-top: 50px;">
 						<div class="col-md-6 col-md-offset-3 text-center">
-							<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="0.8s" data-wow-delay=".5s"></h2>
-							<p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="1.1s"><a class="btn btn-success btn-lg">Alumni Academic Experience</a></p>
+							<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="0.8s" data-wow-delay=".5s">Alumni Academic Experience</h2>
 						</div>
 
 						<!-- Video Frame -->
