--- a/index.html
+++ b/index.html
@@ -314,6 +314,9 @@
 	<!-- superslides -->
 	<script src="js/jquery.superslides.js"></script>
 
+	<!-- Hash Change fallback -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-hashchange/1.3/jquery.ba-hashchange.min.js"></script>
+
 	<!-- countTo -->
 	<!-- <script src="js/jquery.countTo.js"></script> -->
 
@@ -321,15 +324,6 @@
 	<script src="js/wow.min.js"></script>
 
 	<script>
-		$('#slides').superslides({
-			play: 5000,
-			animation_speed: 2000,
-			animation:'fade',
-			nav: true,
-			pagination:true
-		});
-
-		new WOW().init();
 		var converter =  new showdown.Converter({
 	    'github_flavouring': true,
 	    'tables': true
@@ -387,7 +381,7 @@
 
 		        if (preventKeyPress || e.keyCode == 27){
 							e.preventDefault();
-							window.history.back();
+							location.hash = '';
 						}
 		    });
 		});
@@ -400,7 +394,7 @@
 			var existing = $('section[aria-hidden="false"]').attr('aria-hidden',true).hide();
 			console.log(existing);
 			document.body.classList.toggle('noscroll', false);
-			document.body.scrollTop = 0;
+			// document.body.scrollTop = 0;
 			var overlay = $(tag+'-overlay');
 			if(overlay.length === 0)
 				return;
@@ -417,11 +411,23 @@
 					console.log(overlay.scrollTop)
 			 overlay.scrollTop = 0;
 		}
-		window.onhashchange = function(){
+	$(function(){
+		$('#slides').superslides({
+			play: 5000,
+			animation_speed: 2000,
+			animation:'fade',
+			nav: true,
+			pagination:true
+		});
+
+		new WOW().init();
+		$(window).hashchange(function(){
 			console.log(location.hash);
 			openOverlay(location.hash);
-		}
+		});
+		$(window).hashchange();
 		openOverlay(location.hash);
+	});
 	</script>
 
 	<!-- Main -->
