downgrade js functions to support older browsers

--- a/index.html
+++ b/index.html
@@ -28,26 +28,26 @@
 	<link rel="shortcut icon" href="favicon.ico">
 
 	<!-- Google Fonts -->
-	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Monsterrat:400,700|Merriweather:400,300italic,700' rel='stylesheet' type='text/css'>
+	<!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Monsterrat:400,700|Merriweather:400,300italic,700' rel='stylesheet' type='text/css'> -->
 
 	<!-- Font-Awesome -->
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="css/font-awesome-custom.css">
+	<!-- <link rel="stylesheet" href="css/font-awesome-custom.css"> -->
 
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 
 	<!-- Icomoon Icon Fonts-->
-	<link rel="stylesheet" href="css/icomoon.css">
+	<!-- <link rel="stylesheet" href="css/icomoon.css"> -->
 
 	<link rel="stylesheet" href="css/superslides.css">
 
 	<!-- Magnific Popup-->
-	<link rel="stylesheet" href="css/magnific-popup.css">
+	<!-- <link rel="stylesheet" href="css/magnific-popup.css"> -->
 
 	<!-- Owl Carousel -->
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
+	<!-- <link rel="stylesheet" href="css/owl.carousel.min.css"> -->
+	<!-- <link rel="stylesheet" href="css/owl.theme.default.min.css"> -->
 
 	<!-- Bootstrap  -->
 	<link rel="stylesheet" href="css/bootstrap.css">
@@ -60,9 +60,6 @@
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
-
-	<!-- Showdown markdown -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.4.1/showdown.min.js"></script>
 
 	<!-- Ubuntu Font -->
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
@@ -90,31 +87,30 @@
 		  </ul>
 			<nav class="slides-navigation">
       <a href="#" class="next">
-        <i class="icon-chevron-right"></i>
+        <i class="fa fa-chevron-right"></i>
       </a>
       <a href="#" class="prev">
-        <i class="icon-chevron-left"></i>
+        <i class="fa fa-chevron-left"></i>
       </a>
     </nav>
 			<div class="cover">
-				<div class="row p-b">
+				<div class="row">
 					<div class="col-md-6 col-md-offset-3 text-center">
-						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="0.8s" d
-						ata-wow-delay=".5s">The IIIT-B Student Kit</h2>
+						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="0.8s" data-wow-delay=".5s">The IIIT-B Student Kit</h2>
 						<p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay=".8s">A guide by the students of IIIT-B</p>
 						<p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay=".8s">Everything you need to know as you join the IIIT-B community</p>
 						<p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay=".8s">Have look at the <b><i><a href="https://www.facebook.com/groups/391580577698895/" target="_blank">iMTech Admission Forum 2016</a></i></b> too</p>
-						<p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="1.1s"><a href="javascript:void(0)" onclick="scrollSlide()">Scroll down to see<br/><i class="icon-chevron-circle-down" style="font-size: 5em;"></i></a></p>
+						<p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="1.1s"><a href="javascript:void(0)" onclick="scrollSlide()">Scroll down to see<br/><i class="fa fa-chevron-circle-down" style="font-size: 5em;"></i></a></p>
 					</div>
 				</div>
 
 
 				<div class="follow-us-container">
 					<div class="wow fadeInUp text-center" data-wow-duration="0.8s" data-wow-delay="1.5s">
-						<a class="fa fa-facebook social-icon" href="https://www.facebook.com/IIIT-Bangalore-152653471481338/" target="_blank"></a>
-						<a class="fa fa-google-plus social-icon" href="https://plus.google.com/+iiitbmedia/posts" target="_blank"></a>
-						<a class="fa fa-linkedin social-icon" href="https://www.linkedin.com/company/iiit-bangalore" target="_blank"></a>
-						<a class="fa fa fa-youtube-play social-icon" href="https://www.youtube.com/user/iiitbmedia" target="_blank"></a>
+						<a class="fa fa-facebook fa-lg" href="https://www.facebook.com/IIIT-Bangalore-152653471481338/" target="_blank"></a>
+						<a class="fa fa-google-plus fa-lg" href="https://plus.google.com/+iiitbmedia/posts" target="_blank"></a>
+						<a class="fa fa-linkedin fa-lg" href="https://www.linkedin.com/company/iiit-bangalore" target="_blank"></a>
+						<a class="fa fa fa-youtube-play fa-lg" href="https://www.youtube.com/user/iiitbmedia" target="_blank"></a>
 					</div>
 				</div>
 
@@ -300,22 +296,25 @@
 	<!-- <script src="js/bootstrap.min.js"></script> -->
 
 	<!-- Waypoints -->
-   <script src="js/jquery.waypoints.min.js"></script>
+   <!-- <script src="js/jquery.waypoints.min.js"></script> -->
 
 	<!-- Owl Carousel -->
 	<!-- <script src="js/owl.carousel.min.js"></script> -->
 
 	<!-- Magnific Popup -->
-	<script src="js/jquery.magnific-popup.min.js"></script>
+	<!-- <script src="js/jquery.magnific-popup.min.js"></script> -->
 
 	<!-- Stellar -->
-	<script src="js/jquery.stellar.min.js"></script>
+	<!-- <script src="js/jquery.stellar.min.js"></script> -->
 
 	<!-- superslides -->
 	<script src="js/jquery.superslides.js"></script>
 
+	<!-- Showdown markdown -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.4.1/showdown.min.js"></script>
+
 	<!-- Hash Change fallback -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-hashchange/1.3/jquery.ba-hashchange.min.js"></script>
+	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-hashchange/1.3/jquery.ba-hashchange.min.js"></script> -->
 
 	<!-- countTo -->
 	<!-- <script src="js/jquery.countTo.js"></script> -->
@@ -333,15 +332,15 @@
 				$(element).append(converter.makeHtml(data));
 			});
 		};
-		function readFiles(tag,Title = "none",filename = "none") {
+		function readFiles(tag,Title,filename) {
 			String.prototype.capitalize = function(lower) {
     		return (lower ? this.toLowerCase() : this).replace(/(?:^|\s)\S/g, function(a) { return a.toUpperCase(); });
 			};
 
-			if(filename==="none"){
+			if(filename===undefined){
 				filename = 'docs/'+tag+".md	";
 			}
-			if(Title === "none"){
+			if(Title === undefined){
 				Title = tag.capitalize();
 			}
 			var newDiv= $('<div/>', { id: tag});
@@ -393,7 +392,7 @@
 		function openOverlay(tag){
 			var existing = $('section[aria-hidden="false"]').attr('aria-hidden',true).hide();
 			console.log(existing);
-			document.body.classList.toggle('noscroll', false);
+			$('body').toggleClass('noscroll', false);
 			// document.body.scrollTop = 0;
 			var overlay = $(tag+'-overlay');
 			if(overlay.length === 0)
@@ -403,7 +402,7 @@
 					no-scroll class on the body */
 			 overlay.attr('aria-hidden', false);
 			 overlay.show();
-			 document.body.classList.toggle('noscroll', true);
+			 $('body').toggleClass('noscroll', true);
 
 			 /* On some mobile browser when the overlay was previously
 					opened and scrolled, if you open it again it doesn't
@@ -411,7 +410,37 @@
 					console.log(overlay.scrollTop)
 			 overlay.scrollTop = 0;
 		}
-	$(function(){
+		(function(window) {
+
+		  // exit if the browser implements that event
+		  if ( "onhashchange" in window.document.body ) { return; }
+
+		  var location = window.location,
+		    oldURL = location.href,
+		    oldHash = location.hash;
+
+		  // check the location hash on a 100ms interval
+		  setInterval(function() {
+		    var newURL = location.href,
+		      newHash = location.hash;
+
+		    // if the hash has changed and a handler has been bound...
+		    if ( newHash != oldHash && typeof window.onhashchange === "function" ) {
+		      // execute the handler
+		      window.onhashchange({
+		        type: "hashchange",
+		        oldURL: oldURL,
+		        newURL: newURL
+		      });
+
+		      oldURL = newURL;
+		      oldHash = newHash;
+		    }
+		  }, 100);
+
+		})(window);
+
+	// $(function(){
 		$('#slides').superslides({
 			play: 5000,
 			animation_speed: 2000,
@@ -421,16 +450,16 @@
 		});
 
 		new WOW().init();
-		$(window).hashchange(function(){
+		window.onhashchange = function(){
 			console.log(location.hash);
 			openOverlay(location.hash);
-		});
-		$(window).hashchange();
+		};
+		// $(window).hashchange();
 		openOverlay(location.hash);
-	});
+	// });
 	</script>
 
 	<!-- Main -->
-	<script src="js/main.js"></script>
+	<!-- <script src="js/main.js"></script> -->
 	</body>
 </html>
