--- a/index.html
+++ b/index.html
@@ -278,14 +278,15 @@
 				</div>
 			</div>
 		</div>
-
+		<a href="http://www.freecounterstat.com" target="_Blank" title="hit counter">hit counter</a><br/>
+		<script type="text/javascript" src="http://counter8.01counter.com/private/counter.js?c=7dbaf020ad970b14ff5ac27f6b6ca060"></script>
 		<div class="col-sm-12">
-    	<div class="copyright-text text-center">
+    		<div class="copyright-text text-center">
 				<p>Images used with permission from Bhargav Sridhar</p>
-    		<p>&copy; Zense 2016. All Rights Reserved</p>
-    		<p>Designed by <a href="http://zense.co.in/">Zense</a></p>
-    	</div>
-    </div>
+    				<p>&copy; Zense 2016. All Rights Reserved</p>
+    				<p>Designed by <a href="http://zense.co.in/">Zense</a></p>
+    		</div>
+    		</div>
 
 	<!-- END page-->
 
