--- a/index.html
+++ b/index.html
@@ -278,8 +278,9 @@
 				</div>
 			</div>
 		</div>
-		<a href="http://www.freecounterstat.com" target="_Blank" title="hit counter">hit counter</a><br/>
-		<script type="text/javascript" src="http://counter8.01counter.com/private/counter.js?c=7dbaf020ad970b14ff5ac27f6b6ca060"></script>
+		<center>Counter for website<br/>
+		<script type="text/javascript" src="http://counter8.01counter.com/private/counter.js?c=7dbaf020ad970b14ff5ac27f6b6ca060"></script></center>
+		<br><br>
 		<div class="col-sm-12">
     		<div class="copyright-text text-center">
 				<p>Images used with permission from Bhargav Sridhar</p>
