--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 				<div class="fh5co-text-inner">
 					<div class="row p-b" style="padding-top: 50px;">
 						<div class="col-md-6 col-md-offset-3 text-center">
-							<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="0.4s" data-wow-delay=".5s">Alumni Academic Experience</h2>
+							<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="0.4s" data-wow-delay=".5s">Academic Experience</h2>
 						</div>
 
 						<!-- Video Frame -->
