--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 								<div class="fh5co-text">
 									<div class="fh5co-text-inner">
 										<div class="row">
-											<div class="col-md-6"><h3>Induction day schedule</h3></div>
+											<div class="col-md-6"><h3>Induction Schedule</h3></div>
 											<div class="col-md-6"><p>Your schedule for the first few weeks @ IIIT-B</p></div>
 										</div>
 									</div>
