--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 						</a>
 					</li>
 					<li class="wow fadeInUp back2" data-wow-duration="0.4s" data-wow-delay="0.4s">
-						<a class="open-overlay" data-tag="induction" href="#induction">
+						<a class="open-overlay" data-tag="induction" href="docs/induction.html">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
 								<div class="fh5co-text">
@@ -278,6 +278,7 @@
 				</div>
 			</div>
 		</div>
+
 		<center>Counter for website<br/>
 		<script type="text/javascript" src="http://counter8.01counter.com/private/counter.js?c=7dbaf020ad970b14ff5ac27f6b6ca060"></script></center>
 		<br><br>
