--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 									<div class="fh5co-text-inner">
 										<div class="row">
 											<div class="col-md-6"><h3>Quora Q&amp;As</h3></div>
-											<div class="col-md-6"><p>More than 700 questions were asked on Quora, by aspiring students and were answered by the students of IIITB over the years.</p></div>
+											<div class="col-md-6"><p>Nearly 800 questions were asked on Quora, by aspiring students and were answered by the students of IIITB over the years.</p></div>
 										</div>
 									</div>
 								</div>
