--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 								<div class="fh5co-text">
 									<div class="fh5co-text-inner">
 										<div class="row">
-											<div class="col-md-6"><h3>Co-Curricular Activities</h3></div>
+											<div class="col-md-6"><h3>Gallery and more</h3></div>
 											<div class="col-md-6"><p>Check it out.</p></div>
 										</div>
 									</div>
