--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 							</div>
 						</a>
 					</li>
-					<li class="wow fadeInUp back1" data-wow-duration="0.4s" data-wow-delay="0.4s">
+					<!--<li class="wow fadeInUp back1" data-wow-duration="0.4s" data-wow-delay="0.4s">
 						<a href="#gallery">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
@@ -272,7 +272,7 @@
 								</div>
 							</div>
 						</a>
-					</li>
+					</li>-->
 					<li class="wow fadeInUp back1" data-wow-duration="0.4s" data-wow-delay="0.4s">
 						<a href="#contributions">
 							<div class="fh5co-overlay"></div>
