--- a/index.html
+++ b/index.html
@@ -242,6 +242,37 @@
 							</div>
 						</a>
 					</li>
+					<li class="wow fadeInUp back1" data-wow-duration="0.4s" data-wow-delay="0.4s">
+						<a href="https://drive.google.com/open?id=0Bx4ig4_PLzCCQjh6WmVXX2xiTFk" target="_blank">
+							<div class="fh5co-overlay"></div>
+							<div class="container">
+								<div class="fh5co-text">
+									<div class="fh5co-text-inner">
+										<div class="row">
+											<div class="col-md-6"><h3>IIIT-B Gallery</h3></div>
+											<div class="col-md-6"><p>Want to catch a glimpse of our campus ? ;)</p></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</a>
+					</li>
+					<li class="wow fadeInUp back2" data-wow-duration="0.4s" data-wow-delay="0.4s">
+						<a href="https://www.youtube.com/c/iiitbmedia/" target="_blank">
+							<div class="fh5co-overlay"></div>
+							<div class="container">
+								<div class="fh5co-text">
+									<div class="fh5co-text-inner">
+										<div class="row">
+											<div class="col-md-6"><h3>Official YouTube Channel</h3></div>
+											<div class="col-md-6"><p>Around 200 videos covering the various activities in IIITB, all on YouTube</p></div>
+
+										</div>
+									</div>
+								</div>
+							</div>
+						</a>
+					</li>
 					<!--<li class="wow fadeInUp back1" data-wow-duration="0.4s" data-wow-delay="0.4s">
 						<a href="#gallery">
 							<div class="fh5co-overlay"></div>
@@ -256,7 +287,7 @@
 								</div>
 							</div>
 						</a>
-					</li>					
+					</li>
 					<li class="wow fadeInUp back1" data-wow-duration="0.4s" data-wow-delay="0.4s">
 						<a href="#contact">
 							<div class="fh5co-overlay"></div>
