--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 						</a>
 					</li>
 					<li class="wow fadeInUp back2" data-wow-duration="0.4s" data-wow-delay="0.4s">
-						<a class="open-overlay" data-tag="induction" href="docs/induction.html">
+						<a class="open-overlay" data-tag="induction" href="#induction">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
 								<div class="fh5co-text">
