--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 				<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="0.4s" data-wow-delay=".5s">The IIIT-B Student Kit</h2>
 				<p class="wow fadeInUp" data-wow-duration="0.4s" data-wow-delay=".8s">A guide by the students of IIIT-B</p>
 				<p class="wow fadeInUp" data-wow-duration="0.4s" data-wow-delay=".8s">Everything you need to know as you join the IIIT-B community</p>
-				<p class="wow fadeInUp" data-wow-duration="0.4s" data-wow-delay=".8s">Have look at the <b><i><a href="https://www.facebook.com/groups/391580577698895/" target="_blank">iMTech Admission Forum 2016</a></i></b> too</p>
+				<p class="wow fadeInUp" data-wow-duration="0.4s" data-wow-delay=".8s">Have a look at the <b><i><a href="https://www.facebook.com/groups/391580577698895/" target="_blank">iMTech Admission Forum 2016</a></i></b> too</p>
 				<p class="wow fadeInUp" data-wow-duration="0.4s" data-wow-delay="1.1s"><a href="javascript:void(0)" onclick="scrollSlide()">Scroll down to see<br/><i class="fa fa-chevron-circle-down" style="font-size: 5em;"></i></a></p>
 			</div>
 		</div>
