--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 						</a>
 					</li>
 					<li class="wow fadeInUp back1" data-wow-duration="0.4s" data-wow-delay="0.4s">
-						<a href="https://drive.google.com/open?id=0Bx4ig4_PLzCCQjh6WmVXX2xiTFk" target="_blank">
+						<a href="./docs/gallery.html" target="_blank">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
 								<div class="fh5co-text">
