--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 						</a>
 					</li>
 					<li class="wow fadeInUp back1" data-wow-duration="0.4s" data-wow-delay="0.4s">
-						<a href="#clubs" target="_blank">
+						<a href="#clubs">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
 								<div class="fh5co-text">
