--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 				<a class="fa fa-google-plus fa-lg" href="https://plus.google.com/+iiitbmedia/posts" target="_blank"></a>
 				<a class="fa fa-linkedin fa-lg" href="https://www.linkedin.com/company/iiit-bangalore" target="_blank"></a>
 				<a class="fa fa fa-youtube-play fa-lg" href="https://www.youtube.com/user/iiitbmedia" target="_blank"></a>
+				<a class="fa fa-twitter fa-lg" href="https://twitter.com/IIITB_official" target="_blank"></a>
 			</div>
 		</div>
 
