--- a/index.html
+++ b/index.html
@@ -274,6 +274,21 @@
 						</a>
 					</li>
 					<li class="wow fadeInUp back2" data-wow-duration="0.4s" data-wow-delay="0.4s">
+						<a href="#keyofficials">
+							<div class="fh5co-overlay"></div>
+							<div class="container">
+								<div class="fh5co-text">
+									<div class="fh5co-text-inner">
+										<div class="row">
+											<div class="col-md-6"><h3>Key Officials</h3></div>
+											<div class="col-md-6"><p>Contact info of coordinators</p></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</a>
+					</li>
+					<li class="wow fadeInUp back2" data-wow-duration="0.4s" data-wow-delay="0.4s">
 						<a href="https://www.youtube.com/c/iiitbmedia/" target="_blank">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
