--- a/index.html
+++ b/index.html
@@ -464,6 +464,7 @@
 		readFiles('placestovisit', 'Places to Visit in & around Bangalore');
 		readFiles('hotels', 'Hotels around IIIT-B');
 		readFiles('contributions', 'Contributors');
+		readFiles('keyofficials','Contact Info');
 
 		$(function () {
 		    var rx = /INPUT|TEXTAREA/i;
