changed keyofficials to html

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 						</a>
 					</li>
 					<li class="wow fadeInUp back2" data-wow-duration="0.4s" data-wow-delay="0.4s">
-						<a href="#keyofficials">
+						<a href="./docs/keyofficials.html" target="_blank">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
 								<div class="fh5co-text">
@@ -464,7 +464,6 @@
 		readFiles('placestovisit', 'Places to Visit in & around Bangalore');
 		readFiles('hotels', 'Hotels around IIIT-B');
 		readFiles('contributions', 'Contributors');
-		readFiles('keyofficials','Contact Info');
 
 		$(function () {
 		    var rx = /INPUT|TEXTAREA/i;
