clubs and key officials updated

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 									<div class="fh5co-text-inner">
 										<div class="row">
 											<div class="col-md-6"><h3>IIIT-B Gallery</h3></div>
-											<div class="col-md-6"><p>Want to catch a glimpse of our campus ? ;)</p></div>
+											<div class="col-md-6"><p>Want to catch a glimpse of our campus ?😉</p></div>
 										</div>
 									</div>
 								</div>
