updating club info

--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
 			};
 
 			if(filename===undefined){
-				filename = 'docs/'+tag+".md	";
+				filename = 'docs/'+tag+'.md	';
 			}
 			if(Title === undefined){
 				Title = tag.capitalize();
