--- a/index.html
+++ b/index.html
@@ -198,6 +198,21 @@
 						</a>
 					</li>
 					<li class="wow fadeInUp back1" data-wow-duration="0.4s" data-wow-delay="0.4s">
+						<a href="#events">
+							<div class="fh5co-overlay"></div>
+							<div class="container">
+								<div class="fh5co-text">
+									<div class="fh5co-text-inner">
+										<div class="row">
+											<div class="col-md-6"><h3>Events organized</h3></div>
+											<div class="col-md-6"><p>The fun is in the events!!</p></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</a>
+					</li>
+					<li class="wow fadeInUp back1" data-wow-duration="0.4s" data-wow-delay="0.4s">
 						<a href="https://www.youtube.com/watch?v=1A94Q7B7nT4&index=6&list=PLe1PiiFnE7y_CIL-_3sWfCM0R0_5HZa8W" target="_blank">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
@@ -458,6 +473,7 @@
 		}
 		readFiles('faq', 'FAQ');
 		readFiles('clubs', 'Clubs @ IIITB');
+		readFiles('events', 'Events @ IIITB');
 		readFiles('induction','Induction Schedule');
 		readFiles('required', 'Required Items');
 		readFiles('howtoreach', 'How to Reach IIIT-B');
