--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 							<div class="fh5co-text">
 								<div class="fh5co-text-inner">
 									<div class="row">
-										<div class="col-md-6"><h3>Reaching IIITB</h3></div>
+										<div class="col-md-6"><h3>Reaching IIIT-B</h3></div>
 										<div class="col-md-6"><p>Not sure how to get here? Click here to know more.</p></div>
 								</div>
 							</div>
@@ -477,7 +477,7 @@
 		readFiles('induction','Induction Schedule');
 		readFiles('required', 'Required Items');
 		readFiles('howtoreach', 'How to Reach IIIT-B');
-		readFiles('placestovisit', 'Places to Visit in & around Bangalore');
+		readFiles('placestovisit', 'Places to Visit in & around Bengaluru');
 		readFiles('hotels', 'Hotels around IIIT-B');
 		readFiles('contributions', 'Contributors');
 
