--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 							<div class="fh5co-text">
 								<div class="fh5co-text-inner">
 									<div class="row">
-										<div class="col-md-6"><h3>Reaching IIIT-B</h3></div>
+										<div class="col-md-6"><h3>Reaching IIIT Bangalore</h3></div>
 										<div class="col-md-6"><p>Not sure how to get here? Click here to know more.</p></div>
 								</div>
 							</div>
