--- a/index.html
+++ b/index.html
@@ -274,7 +274,8 @@
 						</a>
 					</li>
 					<li class="wow fadeInUp back1" data-wow-duration="0.4s" data-wow-delay="0.4s">
-						<a href="./docs/gallery.html" target="_blank">
+						<!--<a href="./docs/gallery.html" target="_blank">-->
+							<a href="http://photogallery.iiitb.ac.in/" target="_blank">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
 								<div class="fh5co-text">
