--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 			</div>
 		</div>
 
-		<center>Counter for website<br/>
+		<!--<center>Counter for website<br/>
 			<script type="text/javascript" src="https://counter6.freecounter.ovh/private/counter.js?c=l8e2uep3zxrs222yxc49m5ltscexjc43"></script>
 			<noscript>
 				<a href="https://www.freecounterstat.com" title="website counter">
@@ -395,7 +395,7 @@
 			</noscript>
 
 
-		</center>
+		</center>-->
 		<br><br>
 		<div class="col-sm-12">
     		<div class="copyright-text text-center">
