--- a/index.html
+++ b/index.html
@@ -96,15 +96,17 @@
       		</a>
     	</nav>
 	<div class="cover">
+		
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3 text-center">
-				<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="0.4s" data-wow-delay=".5s">The IIIT-B Student Kit</h2>
-				<p class="wow fadeInUp" data-wow-duration="0.4s" data-wow-delay=".8s">A guide by the students of IIIT-B</p>
-				<p class="wow fadeInUp" data-wow-duration="0.4s" data-wow-delay=".8s">Everything you need to know as you join the IIIT-B community</p>
+				<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="0.4s" data-wow-delay=".5s">The IIITB Student Kit</h2>
+				<p class="wow fadeInUp" data-wow-duration="0.4s" data-wow-delay=".8s">A guide by the students of IIIT Bangalore</p>
+				<p class="wow fadeInUp" data-wow-duration="0.4s" data-wow-delay=".8s">Everything you need to know as you join the IIITB community</p>
 				<p class="wow fadeInUp" data-wow-duration="0.4s" data-wow-delay=".8s">Have a look at the <b><i><a href="https://www.facebook.com/groups/391580577698895/" target="_blank">iMTech Admission Forum 2019 </a></i></b>  too</p>
 				<p class="wow fadeInUp" data-wow-duration="0.4s" data-wow-delay="1.1s"><a href="javascript:void(0)" onclick="scrollSlide()">Scroll down to see<br/><i class="fa fa-chevron-circle-down" style="font-size: 5em;"></i></a></p>
 			</div>
 		</div>
+		
 
 
 		<div class="follow-us-container">
