IIIT-B to IIITB

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>Student Kit | IIITB</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Everything a IIIT-B aspirant needs !" />
+<meta name="description" content="Everything a IIITB aspirant needs !" />
 <meta name="keywords" content="IIIT B, Student Kit, Admission" />
 <meta name="author" content="Zense|IIITB" />
 
@@ -96,7 +96,7 @@
       		</a>
     	</nav>
 	<div class="cover">
-		
+
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3 text-center">
 				<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="0.4s" data-wow-delay=".5s">The IIITB Student Kit</h2>
@@ -106,7 +106,7 @@
 				<p class="wow fadeInUp" data-wow-duration="0.4s" data-wow-delay="1.1s"><a href="javascript:void(0)" onclick="scrollSlide()">Scroll down to see<br/><i class="fa fa-chevron-circle-down" style="font-size: 5em;"></i></a></p>
 			</div>
 		</div>
-		
+
 
 
 		<div class="follow-us-container">
@@ -191,7 +191,7 @@
 								<div class="fh5co-text">
 									<div class="fh5co-text-inner">
 										<div class="row">
-											<div class="col-md-6"><h3>Clubs @ IIIT-B</h3></div>
+											<div class="col-md-6"><h3>Clubs @ IIITB</h3></div>
 											<div class="col-md-6"><p>Have a look at the exciting clubs awaiting you!.</p></div>
 										</div>
 									</div>
@@ -222,7 +222,7 @@
 									<div class="fh5co-text-inner">
 										<div class="row">
 											<div class="col-md-6"><h3>Experiences</h3></div>
-											<div class="col-md-6"><p>Here's what the IIIT-B alumni have got to say.</p></div>
+											<div class="col-md-6"><p>Here's what the IIITB alumni have got to say.</p></div>
 										</div>
 									</div>
 								</div>
@@ -237,7 +237,7 @@
 									<div class="fh5co-text-inner">
 										<div class="row">
 											<div class="col-md-6"><h3>Induction Schedule</h3></div>
-											<div class="col-md-6"><p>Your schedule for the first few weeks @ IIIT-B</p></div>
+											<div class="col-md-6"><p>Your schedule for the first few weeks @ IIITB</p></div>
 										</div>
 									</div>
 								</div>
@@ -283,7 +283,7 @@
 								<div class="fh5co-text">
 									<div class="fh5co-text-inner">
 										<div class="row">
-											<div class="col-md-6"><h3>IIIT-B Gallery</h3></div>
+											<div class="col-md-6"><h3>IIITB Gallery</h3></div>
 											<div class="col-md-6"><p>Want to catch a glimpse of our campus ?😉</p></div>
 										</div>
 									</div>
@@ -479,9 +479,9 @@
 		readFiles('events', 'Events @ IIITB');
 		readFiles('induction','Induction Schedule');
 		readFiles('required', 'Required Items');
-		readFiles('howtoreach', 'How to Reach IIIT-B');
+		readFiles('howtoreach', 'How to Reach IIITB');
 		readFiles('placestovisit', 'Places to Visit in & around Bengaluru');
-		readFiles('hotels', 'Hotels around IIIT-B');
+		readFiles('hotels', 'Hotels around IIITB');
 		readFiles('contributions', 'Contributors');
 
 		$(function () {
