Updated Induction Timetable

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 									<div class="fh5co-text-inner">
 										<div class="row">
 											<div class="col-md-6"><h3>FAQs</h3></div>
-											<div class="col-md-6"><p>Check out the Frequently Asked Questions. Also ask any further questions at the iMTech Admission Forum 2018.</p></div>
+											<div class="col-md-6"><p>Check out the Frequently Asked Questions. Also ask any further questions at the iMTech Admission Forum 2019.</p></div>
 										</div>
 									</div>
 								</div>
@@ -361,7 +361,7 @@
 									<div class="fh5co-text-inner">
 										<div class="row">
 											<div class="col-md-6"><h3>Contributions</h3></div>
-											<div class="col-md-6"><p>The Student Kit 2018 team.</p></div>
+											<div class="col-md-6"><p>The Student Kit 2019 team.</p></div>
 										</div>
 									</div>
 								</div>
@@ -403,7 +403,7 @@
 		<div class="col-sm-12">
     		<div class="copyright-text text-center">
 				<p>Images used with permission from Bhargav Sridhar</p>
-    				<p>&copy; Zense 2018. All Rights Reserved</p>
+    				<p>&copy; Zense 2019. All Rights Reserved</p>
     				<p>Designed by <a href="http://zense.co.in/">Zense</a></p>
     		</div>
     		</div>
@@ -477,7 +477,7 @@
 		readFiles('faq', 'FAQ');
 		readFiles('clubs', 'Clubs @ IIITB');
 		readFiles('events', 'Events @ IIITB');
-		readFiles('induction','Induction Schedule');
+		readFiles('induction','Induction Schedule By SquareOne');
 		readFiles('required', 'Required Items');
 		readFiles('howtoreach', 'How to Reach IIITB');
 		readFiles('placestovisit', 'Places to Visit in & around Bengaluru');
