--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
 		readFiles('faq', 'FAQ');
 		readFiles('clubs', 'Clubs @ IIITB');
 		readFiles('events', 'Events @ IIITB');
-		readFiles('induction','Induction Schedule By SquareOne');
+		readFiles('induction','Induction Schedule');
 		readFiles('required', 'Required Items');
 		readFiles('howtoreach', 'How to Reach IIITB');
 		readFiles('placestovisit', 'Places to Visit in & around Bengaluru');
