--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
 <!-- Custom CSS -->
 <link rel="stylesheet" href="css/custom.css">
 
+<!-- Loader CSS -->
+<link rel="stylesheet" href="css/loader.css" />
+
 <!-- Modernizr JS -->
 <script src="js/modernizr-2.6.2.min.js"></script>
 
@@ -80,6 +83,9 @@
 
 </head>
 <body>
+<div class="loader">
+	<img src="images/loading.gif" alt="Loading..." />
+</div>
 <div id="slides">
 	<ul class="slides-container">
 		<li><img src="images/slider/1.jpg" alt=""></li>
@@ -452,6 +458,11 @@
 	<script src="js/wow.min.js"></script>
 
 	<script>
+	window.addEventListener('load', function () {
+        	const loader = document.querySelector('.loader');
+        	loader.className += ' hidden';
+      	});
+		
 		var converter =  new showdown.Converter({
 	    'github_flavouring': true,
 	    'tables': true
