--- a/index.html
+++ b/index.html
@@ -289,15 +289,29 @@
 						</a>
 					</li>
 					<li class="wow fadeInUp back1" data-wow-duration="0.4s" data-wow-delay="0.4s">
-						<!--<a href="./docs/gallery.html" target="_blank">-->
-							<a href="http://photogallery.zense.co.in/" target="_blank">
+						<a href="http://photogallery.zense.co.in/" target="_blank">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
 								<div class="fh5co-text">
 									<div class="fh5co-text-inner">
 										<div class="row">
-											<div class="col-md-6"><h3>IIITB Gallery</h3></div>
+											<div class="col-md-6"><h3>Gallery</h3></div>
 											<div class="col-md-6"><p>Want to catch a glimpse of our campus ?😉</p></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</a>
+					</li>
+					<li class="wow fadeInUp back1" data-wow-duration="0.4s" data-wow-delay="0.4s">
+						<a href="https://storage.googleapis.com/iiitb-vtour/vtour/tour.html" target="_blank">
+							<div class="fh5co-overlay"></div>
+							<div class="container">
+								<div class="fh5co-text">
+									<div class="fh5co-text-inner">
+										<div class="row">
+											<div class="col-md-6"><h3>Virtual Campus Tour</h3></div>
+											<div class="col-md-6"><p>How about a virtual visit to our campus?</p></div>
 										</div>
 									</div>
 								</div>
