--- a/index.html
+++ b/index.html
@@ -409,7 +409,8 @@
 
 						<!-- Video Frame -->
 						<div class="text-center wow fadeInUp" data-wow-duration="0.4s" data-wow-delay="1.1s">
-							<iframe width="75%" height="500" src="https://www.youtube.com/embed/oh2C3Mos5bw" autoplay=0 html5=1 frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+							<div class="youtube" id="oh2C3Mos5bw" src="images/acad/13" style="width: 77%;height: 500px;margin:auto;"></div>
+							<script type="text/javascript" src="https://codegena.com/assets/js/youtube-embed.js"></script>
 						</div>
 					</div>
 				</div>
