--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
       		<a href="#" class="prev">
         			<i class="fa fa-chevron-left"></i>
       		</a>
-    	</nav>
+		</nav>
+	<a href="javascript:void(0)" id="top" onclick="scrollSlide()" ><i id ="topbuticon" class="fa topbuticon fa-chevron-circle-up""></i></a>
 	<div class="cover">
 
 		<div class="row">
