--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
 
 						<!-- Video Frame -->
 						<div class="text-center wow fadeInUp" data-wow-duration="0.4s" data-wow-delay="1.1s">
-							<div class="youtube" id="oh2C3Mos5bw" src="images/acad/13" style="width: 75%;height: 495px;margin:auto;"></div>
+							<div class="youtube" id="oh2C3Mos5bw" src="images/acad/13" style="width: 65vw; height:50vw; margin:auto;"></div>
 							<script type="text/javascript" src="js/youtube-embed.js"></script>
 						</div>
 					</div>
