--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         			<i class="fa fa-chevron-left"></i>
       		</a>
 		</nav>
-	<a href="javascript:void(0)" id="top" onclick="scrollSlide()" ><i id ="topbuticon" class="fa topbuticon fa-chevron-circle-up""></i></a>
+	<a href="javascript:void(0)" id="top" onclick="scrollSlide()"><i id ="topbuticon" class="fa topbuticon fa-chevron-circle-up""></i></a>
 	<div class="cover">
 
 		<div class="row">
@@ -410,7 +410,9 @@
 
 						<!-- Video Frame -->
 						<div class="text-center wow fadeInUp" data-wow-duration="0.4s" data-wow-delay="1.1s">
+
 							<div class="youtube" id="oh2C3Mos5bw" src="images/acad/13" style="width: 65vw; height:35vw; margin:auto;"></div>
+
 							<script type="text/javascript" src="js/youtube-embed.js"></script>
 						</div>
 					</div>
@@ -543,8 +545,13 @@
 		    });
 		});
 
+		var lastClick = 0;
+		var delay = 1000;
 		function scrollSlide() {
-			$('html, body').animate({scrollTop:$('#slides').height()}, 1000);
+			if (lastClick >= (Date.now() - delay))
+				return;
+			lastClick = Date.now();
+			$('html, body').animate({scrollTop:$('#slides').height()}, 700);
 		}
 		/* Open Overlays based on hash values */
 		function openOverlay(tag){
