Updated Virtual campus tour link

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 						</a>
 					</li>
 					<li class="wow fadeInUp back1" data-wow-duration="0.4s" data-wow-delay="0.4s">
-						<a href="https://storage.googleapis.com/iiitb-vtour/vtour/tour.html" target="_blank">
+						<a href="http://iiitb-vtour.hyperrealitytech.com/" target="_blank">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
 								<div class="fh5co-text">
